--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -8,6 +8,7 @@ on:
       - synchronize
       - reopened
       - edited
+      - closed
 
 
   push:
@@ -19,12 +20,13 @@ permissions: write-all
 jobs:
   semantic-pull-request:
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+    if: github.event_name == 'pull_request' && github.event.action != 'closed'
     steps:
       - uses: amannn/action-semantic-pull-request@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   draft-release:
+    if: github.event.action != 'closed'
     runs-on: ubuntu-latest
     outputs:
       tag: ${{ steps.set-output.outputs.tag }}
