ci: remove closed event

--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -8,7 +8,6 @@ on:
       - synchronize
       - reopened
       - edited
-      - closed
 
 
   push:
@@ -20,13 +19,12 @@ permissions: write-all
 jobs:
   semantic-pull-request:
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.event.action != 'closed'
+    if: github.event_name == 'pull_request'
     steps:
       - uses: amannn/action-semantic-pull-request@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   draft-release:
-    if: github.event.action != 'closed'
     runs-on: ubuntu-latest
     outputs:
       tag: ${{ steps.set-output.outputs.tag }}
@@ -47,7 +45,7 @@ jobs:
     permissions: write-all
     needs: draft-release
     runs-on: ubuntu-latest
-    if: github.event.action == 'closed' && contains(needs.draft-release.outputs.url, 'untagged')
+    if: contains(needs.draft-release.outputs.url, 'untagged')
     env:
       TAG: ${{ needs.draft-release.outputs.tag }}
     steps:
