--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -50,10 +50,11 @@ jobs:
       github.event.action != 'opened' && 
       github.event.action != 'edited' && 
       github.event.action != 'reopened' && 
-      GITHUB_HEAD_REF != 'bump-pubspec-version'
+      github.ref_name != 'bump-pubspec-version'
     env:
       TAG: ${{ needs.draft-release.outputs.tag }}
     steps:
+      - run: echo ${{ github.ref_name }}
       - name: Checkout code
         uses: actions/checkout@v3
       - uses: tibdex/github-app-token@v1
