--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -10,16 +10,16 @@ on:
       - edited
 
 
-  push:
-    branches:
-      - main
+#  push:
+#    branches:
+#      - main
 
 permissions: write-all
 
 jobs:
   semantic-pull-request:
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+#    if: github.event_name == 'pull_request'
     steps:
       - uses: amannn/action-semantic-pull-request@v5
         env:
