ci: change condition to or

--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -19,7 +19,7 @@ permissions: write-all
 jobs:
   semantic-pull-request:
     runs-on: ubuntu-latest
-#    if: github.event_name == 'pull_request'
+    if: github.event_name == 'pull_request'
     steps:
       - uses: amannn/action-semantic-pull-request@v5
         env:
@@ -47,14 +47,16 @@ jobs:
     runs-on: ubuntu-latest
     if: |
       contains(needs.draft-release.outputs.url, 'untagged') && 
-      github.event.action != 'opened' && 
-      github.event.action != 'edited' && 
-      github.event.action != 'reopened' && 
-      github.ref_name != 'bump-pubspec-version'
+      (github.event.action != 'opened' || 
+      github.event.action != 'edited' || 
+      github.event.action != 'reopened' || 
+      github.ref_name != 'bump-pubspec-version')
     env:
       TAG: ${{ needs.draft-release.outputs.tag }}
     steps:
       - run: echo ${{ github.ref_name }}
+      - run: echo ${{ contains(needs.draft-release.outputs.url, 'untagged') }}
+      - run: echo ${{ github.event.action }}
       - name: Checkout code
         uses: actions/checkout@v3
       - uses: tibdex/github-app-token@v1
