--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -49,10 +49,10 @@ jobs:
     runs-on: ubuntu-latest
     if: |
       contains(needs.draft-release.outputs.url, 'untagged') && 
-      (github.event.action != 'opened' || 
-      github.event.action != 'edited' || 
-      github.event.action != 'reopened' || 
-      github.head_ref != 'bump-pubspec-version')
+      github.event.action != 'opened' && 
+      github.event.action != 'edited' && 
+      github.event.action != 'reopened' && 
+      github.head_ref != 'bump-pubspec-version'
     env:
       TAG: ${{ needs.draft-release.outputs.tag }}
     steps:
