--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,10 @@ jobs:
   analyze: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ var.FLUTTER_VERSION }}
+      - run: echo ${{ vars.FLUTTER_VERSION }}
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: ${{ var.FLUTTER_VERSION }}
+          flutter-version: ${{ vars.FLUTTER_VERSION }}
           channel: 'stable'
           cache: true
 #          cache-key: ${{ runner.os }}-pub-cache-${{ hashFiles('**/pubspec.lock') }}
